# friendly_jam

./: .gitignore  .justfile  Cargo.toml  ded-end.js  friendly_jam.js  index.html
.github/workflows/: deploy.yml
assets/: palette.ron
assets/dispatcher/: book_text.txt  novella.txt
assets/dispatcher/files/: 0.txt  1.txt  2.txt  3.txt  4.txt
assets/dispatcher/level/: back.ron  front.ron  left.ron  right.ron
assets/solver/: controls.ron  rules.ron
assets/solver/levels/: 1.ron  2.ron  3.ron  4.ron  5.ron  6.ron  _list.ron
crates/friendly-derive/: Cargo.toml
crates/friendly-derive/src/: texture_atlas.rs
docker-target/: .rustc_info.json
src/: main.rs  util.rs
src/assets/: dispatcher.rs  mod.rs  solver.rs
src/assets/font/: font.glsl  mod.rs
src/context/: mod.rs
src/game/: dispatcher.rs  mod.rs  solver.rs
src/interop/: mod.rs
src/menu/: loading_screen.rs  mod.rs
src/menu/lobby/: mod.rs
src/menu/main/: mod.rs
src/model/: mod.rs
src/model/collider/: mod.rs  shape.rs
src/render/: mask.rs  mod.rs  util.rs
src/server/: connection.rs  mod.rs
src/server/state/: mod.rs
src/ui/: layout.rs  mod.rs  state.rs
src/ui/geometry/: mod.rs
src/ui/widgets/: button.rs  icon.rs  input.rs  mod.rs  text.rs
