[package]
name = "friendly_jam"
version.workspace = true
edition.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
friendly-derive = { path = "crates/friendly-derive" }
geng = "0.18"
geng-utils = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = { version = "=0.2.100", features = ["serde"] }
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
parry2d = "0.24.0"

darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
thiserror = "2.0.16"

[dependencies]
friendly-derive.workspace = true
geng.workspace = true
geng-utils.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
rusttype.workspace = true
parry2d.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "=0.3.77"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4.7"

[patch.crates-io]
geng = { git = "https://github.com/geng-engine/geng", rev = "1e35585545463c919ff0da849af4fdad69ab02fa" }
geng-utils = { git = "https://github.com/Nertsal/geng-utils", rev = "f6e07e1db3096d710d5242c80c3781fd2d554045"}
